Update the scale factor for font param before querying the default font.

The very first time the default font is queried may use 1.0 when dsf isn't 1.0.

BUG=698075
TEST=manual.

Review-Url: https://codereview.chromium.org/2745223003
Cr-Commit-Position: refs/heads/master@{#457036}